--- a/OpenProject.vcxproj.filters
+++ b/OpenProject.vcxproj.filters
@@ -124,5 +124,7 @@
     <None Include="Resources\Shaders\VertexFrame.shader" />
     <None Include="Resources\Shaders\FragmentFrame.shader" />
     <None Include="Resources\Shaders\SolidColorFragment.shader" />
+    <None Include="Resources\Shaders\FragmentSkybox.shader" />
+    <None Include="Resources\Shaders\VertexSkybox.shader" />
   </ItemGroup>
 </Project>
